--- a/TojoMobile/Base.lproj/Main.storyboard
+++ b/TojoMobile/Base.lproj/Main.storyboard
@@ -697,7 +697,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="jiB-y7-5HE" kind="show" id="rL8-Eq-ZUR"/>
+                                            <segue destination="jiB-y7-5HE" kind="show" identifier="changeUserInfo" id="rL8-Eq-ZUR"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -766,7 +766,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="kKE-Qu-U9J" kind="show" id="Sei-WP-hw3"/>
+                                            <segue destination="kKE-Qu-U9J" kind="show" identifier="appSetting" id="Sei-WP-hw3"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -812,7 +812,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TaR-u9-NOx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1213" y="1429"/>
+            <point key="canvasLocation" x="2323" y="2885"/>
         </scene>
         <!--我-->
         <scene sceneID="HQm-nv-nBY">
@@ -890,10 +890,10 @@
             </objects>
             <point key="canvasLocation" x="2331" y="-89.25"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Change User Info View Controller-->
         <scene sceneID="ECf-Oq-h8v">
             <objects>
-                <tableViewController id="jiB-y7-5HE" sceneMemberID="viewController">
+                <tableViewController id="jiB-y7-5HE" customClass="TJChangeUserInfoViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="PLj-e2-84k">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -947,7 +947,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="彭涛" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8On-uB-ZUH">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="名字" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8On-uB-ZUH">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -977,7 +977,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="男" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tIX-Iz-xuN">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="性别" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tIX-Iz-xuN">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -1007,7 +1007,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="同济大学" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7oX-8o-jj3">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="大学" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7oX-8o-jj3">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -1037,7 +1037,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="通信工程" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XbL-7k-jRU">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="专业" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XbL-7k-jRU">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -1064,10 +1064,16 @@
                             <outlet property="delegate" destination="jiB-y7-5HE" id="EjM-Ec-4UA"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="userAvatar" destination="Qa1-Ul-HwV" id="B4v-zG-Y1t"/>
+                        <outlet property="userGender" destination="tIX-Iz-xuN" id="8nS-Wk-Cpq"/>
+                        <outlet property="userName" destination="8On-uB-ZUH" id="Loh-nw-4Q1"/>
+                        <outlet property="userUniversity" destination="7oX-8o-jj3" id="Xqk-f0-Ovb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fMD-gf-uIN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2081" y="653"/>
+            <point key="canvasLocation" x="2323" y="641"/>
         </scene>
         <!--User Attend Projects View Controller-->
         <scene sceneID="sw4-Zz-5HC">
@@ -1093,7 +1099,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0T0-e3-WiN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2023" y="1365"/>
+            <point key="canvasLocation" x="2323" y="1405"/>
         </scene>
         <!--User Attend Teams View Controller-->
         <scene sceneID="wkA-Od-Oif">
@@ -1119,7 +1125,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xw9-Rw-5mI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2021" y="2131"/>
+            <point key="canvasLocation" x="2323" y="2171"/>
         </scene>
         <!--主页-->
         <scene sceneID="BAk-3G-oYk">
